feat: validacao de horario conflitante no ato de confirmacao de agendamento